# growth-dash

./: .gitignore  README.md  app.py  growth-dash  growth-dash.caretproject  pyproject.toml
src/growth_dash/: GCCurveData.json  console.py  data.py  ui.py
src/growth_dash/gc_stats/: GCCurveData.json  __init__.py  constants.py  core.py  gc_stats.py
